# sibyl

./: .gitignore  BALANCE.md  CLAUDE.md  EVAL.md  PLAN.md  PUBLISH.md  README.md  REVIEW.md  SPEC.md  TRAINING.md  package.json  test-config.json  tsconfig.json
.husky/: pre-commit
configs/: specter-focus.json
docs/: TRAINING-PROJECT.md
runs/: 2026-02-16T06-27-57.json  2026-02-16T06-27-57.md  2026-02-16T07-04-17.json  2026-02-16T07-04-17.md  2026-02-16T08-15-58.json  2026-02-16T08-15-58.md  2026-02-16T19-56-29.json  2026-02-16T19-56-29.md  2026-02-16T20-01-08.json  2026-02-16T20-01-08.md  2026-02-16T20-52-35.json  2026-02-16T20-52-35.md  2026-02-16T22-46-51.json  2026-02-16T22-46-51.md  2026-02-16T22-52-38.json  2026-02-16T22-52-38.md  2026-02-17T01-41-39.json  2026-02-17T01-41-39.md  2026-02-17T01-43-38.json  2026-02-17T01-43-38.md  2026-02-17T03-48-06.json  2026-02-17T03-48-06.md  2026-02-17T03-53-29.json  2026-02-17T03-53-29.md  2026-02-17T04-00-15.json  2026-02-17T04-00-15.md  2026-02-17T05-26-41.json  2026-02-17T05-26-41.md  2026-02-19T00-00-03.json  2026-02-19T00-00-03.md  2026-02-19T02-02-09.json  2026-02-19T02-02-09.md  2026-02-19T03-02-22.json  2026-02-19T03-02-22.md  2026-02-19T04-02-47.json  2026-02-19T04-02-47.md  2026-02-19T05-00-03.json  2026-02-19T05-00-03.md  2026-02-19T06-02-11.json  2026-02-19T06-02-11.md  (+598 more)
sft/: .gitignore  README.md  infer.py  package-lock.json  package.json  pyproject.toml  train.py
sft/data/: sft-train-meta.jsonl  sft-train.jsonl
sft/src/: convert.ts  stats.ts
sft/tests/: test_infer.py  test_integration.py  test_train.py
(+599 files in other folders)
