[project]
name = "sibyl-sft"
version = "0.1.0"
description = "SIBYL SFT fine-tuning pipeline"
requires-python = ">=3.11"
dependencies = [
    "mlx",
    "mlx-lm",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
